Bug 78411 - Unable to change cursor position in weston-editor ‘entry’ field via touch/mouse
Summary: Unable to change cursor position in weston-editor ‘entry’ field via touch/mouse
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-07 23:21 UTC by Anu Reddy
Modified: 2014-05-14 21:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-05-07 23:21:46 UTC
In weston-editor ‘Entry’ field, cursor position does not change using mouse or touch when multiple lines of text it typed.  Cursor only moves within current(single) line. This is a regression. 

Steps:
1. Launch weston-editor
2. Use on-screen keyboard and type 3-4 lines of text
3. Touch the text to change cursor position. Observe text is selected. This is not user expectation.
4. Touch text in different locations. Observe cursor moves only inside range of current line. Here user expectation would be cursor moving to where the mouse has been clicked or screen has been touched inside the text.  

Software Stack:
wayland (HEAD) 1.4.92-0-g4a4523f
drm (HEAD) libdrm-2.4.52-0-g46d451c
mesa (HEAD) remotes/origin/10.1-0-g340ebdb
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.2-0-g121e70d
cairo (HEAD) heads/1.12-0-g59e2a93
libinput (HEAD) remotes/origin/HEAD-0-g97af5c3
weston (HEAD) 1.4.92-0-gd7d71e8
Comment 1 Ander Conselvan de Oliveira 2014-05-08 11:56:37 UTC
I sent a patch to the list to fix the cursor position issue:

http://lists.freedesktop.org/archives/wayland-devel/2014-May/014725.html
Comment 2 Kristian Høgsberg 2014-05-09 22:33:38 UTC
commit 8e37d96bf70f59e062f7b703c328a00f663021b0
Author: Ander Conselvan de Oliveira <ander.conselvan.de.oliveira@intel.com>
Date:   Thu May 8 14:55:50 2014 +0300

    editor: Fix cursor positioning with pointer and touch
    
    The calculation off the vertical offset between the widget coordinates
    and where the text was rendered was wrong. It was using the constant for
    horizontal offset for that too.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=78411


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.